Fix the footer on smaller devices

--- a/themes/caremad/static/static/css/style.css
+++ b/themes/caremad/static/static/css/style.css
@@ -88,6 +88,10 @@ a:hover {
   padding: 1em 0 0.3em 0;
 }
 
-footer { padding: 2em 15em 4em 15em; }
-footer .about { float: left; }
+footer {
+  margin: auto;
+  max-width: 700px;
+  padding: 2em 0 2em 0;
+}
+
 footer .contact { float: right; }
